--- a/inspecciones/Verificacion_sistemas/estilos.css
+++ b/inspecciones/Verificacion_sistemas/estilos.css
@@ -10,7 +10,7 @@ body {
     flex: 1 0 auto;
     z-index: 3;
     width  : 100%;
-    height : 121% !important ;
+    height : 78% ;
 }
 
 footer{
@@ -35,9 +35,8 @@ footer{
 
 .contenedor-principal{
     position: absolute;
-    background-color: aquamarine;
-    width: 80% !important;
-    height: 75% !important;
+    width: 80%;
+    height: 50%;
     left: 10%;
     border-radius: 20px;
 }
@@ -164,16 +163,17 @@ CON UNA FUNCION DE JS*/
 
 /*ESTILOS PERTENECIENTES A LA PRIMERA PARTE DEL FORMULARIO*/
 .contenedor1{
-    background-color: bisque;
-
+    
+    background-color: rgb(199, 199, 199);
 }
 
 .contenedor2{
-    background-color: violet;
+    
+    background-color: rgb(199, 199, 199);
 }
 
 .contenedor-observaciones{
-    width: 100% !important;
+    width: 100% ;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -263,6 +263,36 @@ CON UNA FUNCION DE JS*/
     font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
 }
 
+
+/*CLASE PERTENECIENTE A LOS BOTONES DE ENTRADA Y SALIDA, TAMBIEN DE ID*/
+
+.identificadores{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 3% 10% 60% 13.55% 0%;
+    grid-template-rows: 100%;
+    background-color: rgb(199, 199, 199);
+}
+
+/*id del textarea que contiene el ID del registro*/
+#identidad{
+    height: 20%;
+    width: 40%;
+}
+
+/*clase que contiene los botones de entrada y salida*/
+.entrada-salida{
+    width: 100%;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 40% 40% ;
+    grid-template-rows: 100%;
+}
+
+#fecha{
+    font-size: 13px;
+    width: 55%;
+}
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 
 
@@ -283,7 +313,7 @@ CON UNA FUNCION DE JS*/
     }
 
     html, body {
-        height: 100% !important;
+        height: 100% ;
     }
 
     #banner{
@@ -293,7 +323,7 @@ CON UNA FUNCION DE JS*/
      
 }
 
-@media (max-width: 1650px) {
+@media (max-width: 1670px) {
 
     .lns-logo{
         width : 120px;
@@ -302,12 +332,12 @@ CON UNA FUNCION DE JS*/
 
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
 
 
     .content{
-        height: 70%;
+        height: 85%;
     }
 
     #botones_desp{
@@ -341,8 +371,17 @@ CON UNA FUNCION DE JS*/
         max-width: none !important; 
     }
 
+    #fecha{
+        width: 75%;
+        font-size: 12px;
+    }
+
     html, body {
-        height: 100% !important;
+        height: 100%;
+    }
+
+    .content{
+        height: 90%;
     }
 
     .cerrar-sesion {
@@ -357,18 +396,23 @@ CON UNA FUNCION DE JS*/
 
 
 
-@media (max-width: 980px){
-    .hr1{
-        display: none !important;
+@media (max-width: 1022px){
+  
+    .content{
+        height: 95%;
     }
 
-    .hr2{
-        display: none !important;
+    .identificadores {
+        grid-template-columns: 5% 13% 40% 15% 0%;
     }
 
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    #fecha{
+        width: 85%;
+        font-size: 11px;
+    }
+
+    .entrada-salida{
+        width: 80%;
     }
 
     footer{
@@ -378,20 +422,26 @@ CON UNA FUNCION DE JS*/
 
 @media (max-width: 730px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
-
     html, body {
-        height: 110% !important;
+        height: 115%;
+    }
+
+    #fecha{
+        display: none;
+    }
+
+    .identificadores {
+        grid-template-columns: 5% 13% 70% 0% 0%;
     }
 
     .content{
-        height: 100% !important;
+        height: 110%;
     }
 
     .contenedorPrincipal{
-        background-color: rgb(0, 59, 92);
         display: grid !important;
         grid-template-columns: 100%;
         grid-template-rows: 50% 50%;
@@ -406,20 +456,31 @@ CON UNA FUNCION DE JS*/
 
 @media (max-width: 669px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
 
     html, body {
-        height: 115% !important;
+        height: 115%;
     }
 
     .content{
-        height: 100% !important;
+        height: 111%;
     }
 
+    .entrada-salida{
+        width: 60%;
+    }
+
+    .boton{
+        padding: 0px;
+        border: 15px;
+        text-align: center;
+        align-content: center;
+        font-size: 12px;
+    }   
+
     .contenedorPrincipal{
-        background-color: rgb(0, 59, 92);
         display: grid !important;
         grid-template-columns: 100%;
         grid-template-rows: 50% 50%;
@@ -432,9 +493,9 @@ CON UNA FUNCION DE JS*/
     
 }
 
-@media (max-width: 471px) {
+@media (max-width: 571px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none; 
     }
 
     #banner{
@@ -456,11 +517,16 @@ CON UNA FUNCION DE JS*/
     }
 
     html, body {
-        height: 120% !important;
+        height: 120%;
     }
 
     .content{
-        height: 150% !important;
+        height: 110%;
+    }
+
+
+    .identificadores {
+        grid-template-columns: 5% 13% 80% 0% 0%;
     }
 
     #form88{
@@ -471,13 +537,19 @@ CON UNA FUNCION DE JS*/
     }
 
     .contenedorPrincipal{
-        background-color: rgb(0, 59, 92);
         display: grid !important;
         grid-template-columns: 100%;
         grid-template-rows: 50% 50%;
         text-align: center;
     }
 
+    .boton{
+        border: 12px;
+        text-align: center;
+        align-content: center;
+        font-size: 10px;
+    }   
+
     
 
     footer{
@@ -486,40 +558,34 @@ CON UNA FUNCION DE JS*/
     
 }
 
-@media (max-width: 320px){
+@media (max-width: 324px){
     html, body {
-        height: 120% !important;
+        height: 120% ;
     }
 
-    .minerva{
-        display: none !important;
-    }
-
-    footer{
-        height: 7.5%;
-    }
-}
-
-
-@media (max-width: 260px){
-    .minerva{
-        display: none !important;
-    }
-
-    footer{
-        height: 10%;
+    .identificadores {
+        grid-template-columns: 5% 13% 100% 0% 0%;
     }
 
     .content{
-        height: 110%;
+        height: 115%;
     }
 
-    html, body {
-        height: 125% !important;
+    .minerva{
+        display: none;
+    }
+
+    footer{
+        height: 7.5%;
     }
 }
 
-@media (max-width: 201px){
+
+@media (max-width: 281px){
+    .minerva{
+        display: none;
+    }
+
     footer{
         height: 10%;
     }
@@ -529,14 +595,28 @@ CON UNA FUNCION DE JS*/
     }
 
     html, body {
-        height: 130% !important;
+        height: 125%;
+    }
+}
+
+@media (max-width: 201px){
+    footer{
+        height: 10%;
+    }
+
+    .content{
+        height: 118%;
+    }
+
+    html, body {
+        height: 125%;
     }   
 }
 
 
 @media (max-width: 175px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none; 
     }
 
     #banner{
@@ -554,11 +634,11 @@ CON UNA FUNCION DE JS*/
     }
     
     .content{
-        height: 135%;
+        height: 130%;
     }
     
     html, body {
-        height: 145% !important;
+        height: 135%;
     }
     
 }
