--- a/Lista_usuarios/estilos.css
+++ b/Lista_usuarios/estilos.css
@@ -99,53 +99,25 @@ footer{
 }
 
 
-/*ESTILOS DE LAS LINEAS QUE DIVIDEN EN SECCIONES EL MENU*/
-.hr1{
-    border-left: thick solid rgba(0, 0, 0, 0.20);;
-    border-top: none;
-    height     : 40vh;
-    left       : 38%;
-    width      : 0.5vh;
-    position   : absolute;
-    top        : 35%;
-   }
-
-
-.hr2{
-    border-left: thick solid rgba(0, 0, 0, 0.20);
-    border-top: none;
-    height     : 40vh;
-    right      : 38%;
-    width      : 0vh;
-    position   : absolute;
-    top        : 35%;
+#botones-lat{
+    border-radius: 5px;
+    margin       : 0.7em;
+    border       : 2px solid white;
+    font-size    : 16px; 
 }
-/*-------------------------------------------------------*/
 
-
-/*Estilos del boton de cerrar sesion */
-.cerrar-sesion {
-    width: 140px;
-    height: 40px;
-    position: absolute;
-    background-color: #616161; 
-    color: rgb(255, 255, 255);
-    border: 2px solid white; 
+/*ESTILOS DEL CONTENEDOR DE LA TABLA*/
+.contenedorTabla{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
     text-align: center;
-    line-height: 18px;
-    text-decoration: none; 
-    font-size: 16px; 
-    border-radius: 5px; 
-    transition: background-color 0.3s ease, border-color 0.3s ease; /*Aplicamos transiciones suaves*/
-    margin: 0.7em;
 }
 
-/* Estilos del botón cuando está en estado activo (clickeado) */
-.cerrar-sesion:hover {
-    background-color: #242424; 
-    border-color: white;
+/*ESTILOS DE LAS CELDAS*/
+th{
+    height: 55px;
 }
-
 
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 
@@ -162,7 +134,7 @@ footer{
 
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
 
     #banner{
@@ -181,7 +153,7 @@ footer{
 
 
     html, body {
-        height: 100% !important;
+        height: 96%;
     }
 
 
@@ -189,20 +161,8 @@ footer{
         height: 70%;
     }
 
-    #botones_desp{
-        font-size: 14px;
-        height: 30px;
-        width: 120px;
-        padding: 2px;
-    }
-
     #banner{
-        height: 20%;
-    }
-
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+        height: 13%;
     }
 
     .banner2{
@@ -210,75 +170,99 @@ footer{
     }
 
     footer{
-        height: 10%;
+        height: 6%;
         align-content: center;
      }
 }
 
 @media (max-width: 1355px){
     .container, .container-sm {
-        max-width: none !important; 
+        max-width: none ; 
     }
 
     html, body {
-        height: 100% !important;
+        height: 99%;
     }
 
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    #banner{
+        height: 12%;
+    }
+
+    .banner2{
+        height: 60px;
+    }
+
+    .content{
+        height: 76.05%;
     }
 
     footer{
-        height: 10%;
+        height: 6.74%;
     }
 }
 
 
 
 @media (max-width: 980px){
-    .hr1{
-        display: none !important;
+
+    html, body{
+        height: 99%;
     }
 
-    .hr2{
-        display: none !important;
-    }
-
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    .content{
+        height: 74%;
     }
 
     footer{
-        height: 10%;
+        height: 6%;
     }
 }
 
+@media (max-width: 800px){
+
+    html, body{
+        height: 99%;
+    }
+
+    .content{
+        height: 74%;
+    }
+
+    .contenedorTabla{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+    }
+
+    footer{
+        height: 6%;
+    }
+}
+
+
 @media (max-width: 730px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
 
     html, body {
-        height: 110% !important;
+        height: 99%;
     }
 
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    .content{
+        height: 72%;
     }
 
     footer{
-        height: 10%;
+        height: 7.5%;
     }
     
 }
 
 @media (max-width: 470px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
     #banner{
@@ -300,27 +284,47 @@ footer{
     }
 
     html, body {
-        height: 100% !important;
+        height: 99%;
     }
 
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    .content{
+        height: 72.5%;
+    }
+
+
+    .contenedorTabla{
+        font-size: 12px;
     }
 
     footer{
-        height: 7.5%;
+        height: 8.9%;
     }
     
 }
 
 @media (max-width: 320px){
     html, body {
-        height: 120% !important;
+        height: 98.5%;
+    }
+
+    .minerva{
+        display: none;
+    }
+
+    #banner{
+        height: 10%;
+    }
+
+    .content{
+        height: 72.5%;
+    }
+
+    .contenedorTabla{
+        font-size: 11px;
     }
 
     footer{
-        height: 7.5%;
+        height: 10.4%;
     }
 }
 
@@ -328,24 +332,39 @@ footer{
     .minerva{
         display: none !important;
     }
+    html, body {
+        height: 96.4%;
+    }
 
-    footer{
+    #banner{
         height: 10%;
     }
 
-    html, body {
-        height: 120% !important;
+    .content{
+        height: 72.5%;
+    }
+
+    footer{
+        height: 12.5%;
     }
 }
 
 @media (max-width: 192px){
-    footer{
+    html, body {
+        height: 94.5%;
+    }
+
+    #banner{
         height: 10%;
     }
 
-    html, body {
-        height: 125% !important;
-    }   
+    .content{
+        height: 72.5%;
+    }
+
+    footer{
+        height: 14.5%;
+    }
 }
 
 
@@ -355,7 +374,7 @@ footer{
     }
 
     #banner{
-        height: 6%;
+        height: 7%;
     }
 
   
@@ -364,12 +383,20 @@ footer{
         height: 40px;
     }
 
-    footer{
-        height: 15%;
-    }
-    
     html, body {
-        height: 118% !important;
+        height: 88%;
+    }
+
+    #banner{
+        height: 10%;
+    }
+
+    .content{
+        height: 72.5%;
+    }
+
+    footer{
+        height: 22.1%;
     }
     
 }
