--- a/mantenimientos/Entrada_calendario/estilos.css
+++ b/mantenimientos/Entrada_calendario/estilos.css
@@ -9,21 +9,46 @@
     font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);  
 }
 
-/*ESTILOS DEL BANNER PRINCPAL*/
+body {
+    min-width            : 100%;
+    min-height           : 100%;
+    display              : flex;
+    flex-direction       : column;
+    background-color     : #E6E6E6;
+}
+
+.content {
+    flex       : 1 0 auto;
+    z-index    : 3;
+    width      : 100%;
+    min-height : 69%;
+}
+
+footer{
+    width           : 100%;
+    height          : 5.5%;
+    color           : #F2F2F2 !important;
+    background-color: #242424 !important;
+    font            : 14px Karla, Sans-Serif;
+}
+
+/*ESTILOS DEL BANNER PRINCIPAL*/
 #banner {
     background-color: rgb(0, 59, 92);
-    height          : 15%;
+    height          : 12%;
     width           : 100%;
     position        : static;
     box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
     z-index         : 1;
 }
 
-/*ESTILOS DEL BANNER SECUNDARIO DONDE ESTA EL BOTON DE REGRESAR*/
+/*ESTILOS DEL BANNER SECUNDARIO*/
 .banner2{
     display         : flex;
+    position        : static;
     max-width       : 100%;
     height          : 8%;
+    z-index         : 2;
     background-color: #616161 !important;
     justify-content : right;
     align-items     : center;
@@ -34,7 +59,9 @@
 .minerva{
     width   : 80px;
     height  : 80px;
+
 }
+
 
 /*ESTILOS DEL LOGO DEL LNS*/
 .lns-logo{
@@ -43,7 +70,7 @@
 }
 
 
-/*ESTILOS PARA QUE EL BOTON DE REGRESAR TENGA MARGEN*/
+/*ESTILOS PARA QUE EL BOTON DE "REGRESAR" RESALTE*/
 #botones-lat{
     border-radius: 5px;
     margin       : 0.7em;
@@ -51,78 +78,160 @@
     font-size    : 16px; 
 }
 
-/*ESTILOS DEL BOTON DE FINALIZAR*/
-#botones_desp{
-    background-color: rgb(68, 160, 221);
-    color           : rgb(255, 255, 255);
-    line-height     : 20px;
-    width           : 200px;  
-    margin          : 10px;
-    font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
-    position        : flex;
-}
-
-body {
-    display         : block;
-    height          : 100%;
-    width           : 100%;
-    background-color: #E6E6E6;
-
-}
-
-.content {
-    flex   : 1 0 auto;
-    z-index: 2;
-    width  : 100%;
-    height : 73.3%;
-}
-
-           /*PERTENECIENTE A ESTILOS DEL FORMULARIO*/
-.contenedorform{
-    width                : 99.5%;
-    height               : 17%;
+/*ESTO ES PARA QUE SE SEPARE EN DOS LA TABLA ALINEADA*/
+#CalendarioAnual{
     display              : grid;
-    margin-left          : 5px;
-    margin-right         : 5px;
     grid-template-columns: 50% 50%;
-    grid-template-rows   : 50% 50%;
+    grid-template-rows   : 100%;
+    font-size            : 15px;
 }
 
+/*PARA QUE LAS CELDAS SEAN DEL MISMO TAMAÑO*/
+td{
+    position      : static;
+    height        : 60px;
+    vertical-align: middle;
+}
 
-.formuno{
-    width           : 100%;
-    height          : 70%;
-    display         : table;
+th{
+    position      : static;
+    height        : 60px;
+    vertical-align: middle;
+}
+/*-----------------------------------------*/
+
+
+/*ESTILOS DEL BOTON DE CAMBIAR VISTA*/
+.cambiar_vista{
+
+    padding         : 5px                 ;
+    border-radius   : 10px                ;
+    width           : 150px               ;
+    height          : 40px                  ;
+    background-color: rgb(68, 160, 221) ;
+    color           : rgb(255, 255, 255);
+    line-height     : 20px                ; 
+    margin          : 20px                ;
+    margin-bottom   : 20px !important     ;
+    font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
+    display         : none;        
+}
+/*---------------------------------------------------------------*/
+
+/*PERTENECIENTE AL CONTENEDOR DE LA OPCION DE SELECCIONAR AÑO*/
+.menu-anio{
+    padding        : 3px;
+    width          : 100%;
+    height         : 130px;
+    display        : flex;
+    justify-content: center;
+    border-left    : 5px;
+}
+/*------------------------------------------------------------*/
+
+/*PERTENECIENTE A LA OPCION DE SELECCIONAR AÑO*/
+
+.seleccionar-anio{
+    background-color: rgb(204, 204, 204);
+    width           : 200px;
+    height          : 100%;
+    border-radius   : 10px;
+    margin-bottom   : 20px;
+    padding         : 10px;
     text-align      : center;
+    position        : static;
+    display         : block;
 }
 
-.formdos{
-    width           : 100%;
-    height          : 65%;
-    display         : table;
-    text-align      : center;
-    font-size       : 13px;
-}
-           /*-----------------------------------*/
-
-
-           /*ESTILOS DEL FOOTER*/
-.footer{
-    position        : absolute;
-    width           : 100%;
-    margin-top      : 10px;
-    color           : #F2F2F2 !important;
-    background-color: #242424 !important;
-    font            : 14px Karla, Sans-Serif;
-}
-
+/*--------------------------------------------*/
 
 
 
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
-@media (max-width: 1709px) {
 
-    #lns-logo{
+
+/*PRIMER CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-width: 1650px) {
+
+    .lns-logo{
+        width :140px;
+        height: 60;
+    }
+
+    .container, .container-sm {
+        max-width: none !important; 
+    }
+
+
+    html, body {
+        height: 100% !important;
+    }
+
+
+    #CalendarioAnual{
+        font-size: 14px;
+    }
+
+    td{
+        position      : static;
+        height        : 90px;
+        vertical-align: middle;
+    }
+    
+    th{
+        position      : static;
+        height        : 90px;
+        vertical-align: middle;
+    }
+     
+}
+
+/*SEGUNDO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (min-width: 966px) {
+    /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO
+    CUANDO LA PANTALLA CREZCA*/
+    #CalendarioAnual{
+        font-size: 13px;
+    }
+
+    #tablauno{
+        width           : 100%;
+        height          : 70%;
+        display         : table !important;
+        text-align      : center;
+    }
+    
+    #tablados{
+        width           : 100%;
+        height          : 70%;
+        display         : table !important;
+        text-align      : center;
+    }
+    
+    td{
+        position      : static;
+        height        : 65px;
+        vertical-align: middle;
+    }
+    
+    th{
+        position      : static;
+        height        : 65px;
+        vertical-align: middle;
+    }
+
+    html, body {
+        height: 100% !important;
+    }
+    
+
+    /******************************************************/
+}
+
+/*TERCER CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-height: 945px) {
+
+    .lns-logo{
         width :140px;
         height: 60;
     }
@@ -131,203 +240,78 @@ body {
     max-width: none !important; 
     }
 
-    .content{
-        height: 64.8%;
-    }
 
     html, body {
-        height: 120% !important;
+        height: 100% !important;
     }
-
-    /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO
-    CUANDO LA PANTALLA SE HAGA PEQUEÑA*/
-    .formuno{
-        font-size: 13px;
-    }
-
-    .formdos{
-        font-size: 13px;
-    }
-
-    .contenedorform{
-        width                : 99.5%;
-        height               : 25%;
-        display              : grid;
-        margin-left          : 5px;
-        margin-right         : 5px;
-        grid-template-columns: 50% 50%;
-        grid-template-rows   : 50% 50%;
-    }
+    
+     
 }
 
+/*CUARTO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-width: 959px) {
 
-
-@media (max-width: 1350px) {
-
-    /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO*/
-
-    .content{
-        height: 90%;
-    }
-
-    body{
-        height: 120% !important;
-    }
-
-
-    td{
-        position      : static;
-        height        : 65px;
-        vertical-align: middle;
-    }
-    
-    th{
-        position      : static;
-        height        : 65px;
-        vertical-align: middle;
-    }
-
-  
-    /*****************************************************/
-
-    #banner{
-        height: 40% !important;
-    }
-
-    .contenedorform{
-        width                : 99.5%;
-        height               : 25%;
-        display              : grid;
-        margin-left          : 5px;
-        margin-right         : 5px;
-        grid-template-columns: 98%;
-        grid-template-rows   : 50% 50%;
-        margin-bottom        : 10px;
-    }
-
-    .formuno{
-        font-size       : 11.45px;
-        width           : 99%;
-        height          : 20%;
-        display         : table;
-        text-align      : center;
-
-    }
-    
-    .formdos{
-        font-size       : 12.45px;
-        width           : 99%;
-        height          : 20%;
-        display         : table;
-        text-align      : center;
-      
-    }
-}
-
-
-@media (min-width: 1155px) {
-    /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO
-    CUANDO LA PANTALLA CREZCA*/
-
-    
-    td{
-        position      : static;
-        height        : 65px;
-        vertical-align: middle;
-    }
-    
-    th{
-        position      : static;
-        height        : 65px;
-        vertical-align: middle;
-    }
-
-    .contenedorform{
-        margin-bottom: 10px;
-    }
-
-    /******************************************************/
-}
-
-@media (max-width: 1155px) {
-
-    /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO*/
-
-
-    td{
-        position      : static;
-        height        : 65px;
-        vertical-align: middle;
-    }
-    
-    th{
-        position      : static;
-        height        : 65px;
-        vertical-align: middle;
-    }
-
-  
-    /*****************************************************/
-
-
-    .contenedorform{
-        width                : 99.5%;
-        height               : 25%;
-        display              : grid;
-        margin-left          : 5px;
-        margin-right         : 5px;
-        grid-template-columns: 98%;
-        grid-template-rows   : 50% 50%;
-        margin-bottom        : 10px;
-    }
-
-    .formuno{
-        font-size       : 11.45px;
-        width           : 99%;
-        height          : 20%;
-        display         : table;
-        text-align      : center;
-
-    }
-    
-    .formdos{
-        font-size       : 12.45px;
-        width           : 99%;
-        height          : 20%;
-        display         : table;
-        text-align      : center;
-      
-    }
-}
-
-
-
-@media (max-height: 945px) {
-
-    #lns-logo{
-        width : 140px;
+    .lns-logo{
+        width :140px;
         height: 60;
     }
 
     .container, .container-sm {
-        max-width: none !important; 
+    max-width: none !important; 
     }
 
 
     html, body {
         height: 100% !important;
     }
-    
-    .contenedorform{
-        margin-bottom: 10px;
+
+    td{
+        position      : static;
+        height        : 40px;
+        vertical-align: middle;
     }
+    
+    th{
+        position      : static;
+        height        : 40px;
+        vertical-align: middle;
+    }
+
+    #tablauno{
+        font-size       : 11.45px;
+        width           : 99%;
+        height          : 70%;
+        display         : table;
+        text-align      : center;
+
+    }
+
+    #tablados{
+        font-size       : 12.45px;
+        width           : 98%;
+        height          : 20%;
+        display         : none;
+        text-align      : center;
+      
+    }
+
+    .cambiar_vista{
+        display: flex;
+    }
+
+    #CalendarioAnual{
+        display              : grid;
+        grid-template-columns: 100%;
+        grid-template-rows   : 100%;
+        font-size            : 11.50px;
+    }
+    
      
 }
 
 
-
-
-@media (max-width: 731px) {
+/*QUINTO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-width: 730px) {
     .container, .container-sm {
         max-width: none !important; 
     }
@@ -336,95 +320,93 @@ body {
     html, body {
         height: 100% !important;
     }
-
-    .contenedorform{
-        margin-bottom: 10px;
-    }
-
-    .content{
-        height: 73.28%;
-    }
     
+    footer{
+        height: 15%;
+    }
 }
 
-@media (max-width: 704px) {
-    .container, .container-sm {
-        max-width: none !important; 
-    }
-
-
-    html, body {
-        height: 100% !important;
-    }
-
-    .contenedorform{
-        margin-bottom: 10px;
-    }
-
-    .content{
-        height: 71.6%;
-    }
-    
-}
-
+/*SEXTO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-width: 450px) {
     .container, .container-sm {
         max-width: none !important; 
+    }
+
+    html, body {
+        height: 100% !important;
+    }
+
+    #banner{
+        height: 12%;
+    }
+
+    #tablados{
+        width    : 70%;
+        font-size: 9.5px;
+    }
+
+
+
+    footer{
+        height: 6.5%;
+    }
+}
+
+/*SEPTIMO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-width: 413px){
+    
+    .lns-logo{
+        width   : 90px;
+        height  : 10px;
+        position: absolute;
+        left    : 1%;
+        top     : 3.5%;
     }
 
     #banner{
         height: 10%;
     }
 
-    html, body {
-        height: 100% !important;
+    .minerva{
+        width : 60px !important;
+        height: 60px !important;
+    }
+
+    .lns-logo{
+        width   : 150px;
+        height  : 40px;
+    }
+
+    footer{
+        height: 8%;
+    }
+}
+
+/*OCTAVO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-width: 220px) {
+    .container, .container-sm {
+    max-width: none !important; 
     }
 
     .minerva{
-        width: 65px;
-        height: 65px;
-    }
-
-    .lns-logo{
-        width: 160px;
-        height: 50px;
-    }
-
-    .contenedorform{
-        margin-bottom: 10px;
-    }
-    
-    .content{
-        height: 73.6%;
-    }
-
-}
-
-@media (max-width: 210px){
-    .lns-logo{
-        width : 160px;
-        height: 50px;
-    }
-}
-
-@media (max-width: 170px) {
-    .container, .container-sm {
-        max-width: none !important; 
-    }
-
-    html, body {
-        height: 130% !important;
-    }
-    .lns-logo{
-        width : 150px;
-        height: 40px;
+        display: none !important;
     }
 
     #banner{
         height: 7%;
     }
 
-    .contenedorform{
-        margin-bottom: 10px;
+    .lns-logo{
+        width   : 150px;
+        height  : 40px;
     }
+
+    html, body {
+        height: 130% !important;
+    }
+
+    footer{
+        height: 11%;
+    }
+    
 }
